test/comparisonOperators2.slq

def main(){
	b:=0:𝔹;
	s:=1:int[16];
	u:=2:uint[16];
	bc:=0:!𝔹;
	n:=3:!ℕ;
	z:=-3:!ℤ;
	q:=1/2:!ℚ;
	r:=4.5:!ℝ;

	bleb:=b≤b;
	(b≤b):=bleb;
	bles:=b≤s;
	(b≤s):=bles;
	bleu:=b≤u;
	(b≤u):=bleu;
	blebc:=b≤bc;
	(b≤bc):=blebc;
	blen:=b≤n;
	(b≤n):=blen;
	blez:=b≤z;
	(b≤z):=blez;
	bleq:=b≤q;
	(b≤q):=bleq;
	bler:=b≤r;
	(b≤r):=bler;
	sleb:=s≤b;
	(s≤b):=sleb;
	sles:=s≤s;
	(s≤s):=sles;
	sleu:=s≤u; /// error
	(s≤u):=sleu; /// error
	slebc:=s≤bc;
	(s≤bc):=slebc;
	slen:=s≤n;
	(s≤n):=slen;
	slez:=s≤z;
	(s≤z):=slez;
	sleq:=s≤q;
	(s≤q):=sleq;
	sler:=s≤r;
	(s≤r):=sler;
	uleb:=u≤b;
	(u≤b):=uleb;
	ules:=u≤s; /// error
	(u≤s):=ules; /// error
	uleu:=u≤u;
	(u≤u):=uleu;
	ulebc:=u≤bc;
	(u≤bc):=ulebc;
	ulen:=u≤n;
	(u≤n):=ulen;
	ulez:=u≤z;
	(u≤z):=ulez;
	uleq:=u≤q;
	(u≤q):=uleq;
	uler:=u≤r;
	(u≤r):=uler;
	bcleb:=bc≤b;
	(bc≤b):=bcleb;
	bcles:=bc≤s;
	(bc≤s):=bcles;
	bcleu:=bc≤u;
	(bc≤u):=bcleu;
	bclebc:=bc≤bc;
	(bc≤bc):=bclebc;
	bclen:=bc≤n;
	(bc≤n):=bclen;
	bclez:=bc≤z;
	(bc≤z):=bclez;
	bcleq:=bc≤q;
	(bc≤q):=bcleq;
	bcler:=bc≤r;
	(bc≤r):=bcler;
	nleb:=n≤b;
	(n≤b):=nleb;
	nles:=n≤s;
	(n≤s):=nles;
	nleu:=n≤u;
	(n≤u):=nleu;
	nlebc:=n≤bc;
	(n≤bc):=nlebc;
	nlen:=n≤n;
	(n≤n):=nlen;
	nlez:=n≤z;
	(n≤z):=nlez;
	nleq:=n≤q;
	(n≤q):=nleq;
	nler:=n≤r;
	(n≤r):=nler;
	zleb:=z≤b;
	(z≤b):=zleb;
	zles:=z≤s;
	(z≤s):=zles;
	zleu:=z≤u;
	(z≤u):=zleu;
	zlebc:=z≤bc;
	(z≤bc):=zlebc;
	zlen:=z≤n;
	(z≤n):=zlen;
	zlez:=z≤z;
	(z≤z):=zlez;
	zleq:=z≤q;
	(z≤q):=zleq;
	zler:=z≤r;
	(z≤r):=zler;
	qleb:=q≤b;
	(q≤b):=qleb;
	qles:=q≤s;
	(q≤s):=qles;
	qleu:=q≤u;
	(q≤u):=qleu;
	qlebc:=q≤bc;
	(q≤bc):=qlebc;
	qlen:=q≤n;
	(q≤n):=qlen;
	qlez:=q≤z;
	(q≤z):=qlez;
	qleq:=q≤q;
	(q≤q):=qleq;
	qler:=q≤r;
	(q≤r):=qler;
	rleb:=r≤b;
	(r≤b):=rleb;
	rles:=r≤s;
	(r≤s):=rles;
	rleu:=r≤u;
	(r≤u):=rleu;
	rlebc:=r≤bc;
	(r≤bc):=rlebc;
	rlen:=r≤n;
	(r≤n):=rlen;
	rlez:=r≤z;
	(r≤z):=rlez;
	rleq:=r≤q;
	(r≤q):=rleq;
	rler:=r≤r;
	(r≤r):=rler;
	bltb:=b<b;
	(b<b):=bltb;
	blts:=b<s;
	(b<s):=blts;
	bltu:=b<u;
	(b<u):=bltu;
	bltbc:=b<bc;
	(b<bc):=bltbc;
	bltn:=b<n;
	(b<n):=bltn;
	bltz:=b<z;
	(b<z):=bltz;
	bltq:=b<q;
	(b<q):=bltq;
	bltr:=b<r;
	(b<r):=bltr;
	sltb:=s<b;
	(s<b):=sltb;
	slts:=s<s;
	(s<s):=slts;
	sltu:=s<u; /// error
	(s<u):=sltu; /// error
	sltbc:=s<bc;
	(s<bc):=sltbc;
	sltn:=s<n;
	(s<n):=sltn;
	sltz:=s<z;
	(s<z):=sltz;
	sltq:=s<q;
	(s<q):=sltq;
	sltr:=s<r;
	(s<r):=sltr;
	ultb:=u<b;
	(u<b):=ultb;
	ults:=u<s; /// error
	(u<s):=ults; /// error
	ultu:=u<u;
	(u<u):=ultu;
	ultbc:=u<bc;
	(u<bc):=ultbc;
	ultn:=u<n;
	(u<n):=ultn;
	ultz:=u<z;
	(u<z):=ultz;
	ultq:=u<q;
	(u<q):=ultq;
	ultr:=u<r;
	(u<r):=ultr;
	bcltb:=bc<b;
	(bc<b):=bcltb;
	bclts:=bc<s;
	(bc<s):=bclts;
	bcltu:=bc<u;
	(bc<u):=bcltu;
	bcltbc:=bc<bc;
	(bc<bc):=bcltbc;
	bcltn:=bc<n;
	(bc<n):=bcltn;
	bcltz:=bc<z;
	(bc<z):=bcltz;
	bcltq:=bc<q;
	(bc<q):=bcltq;
	bcltr:=bc<r;
	(bc<r):=bcltr;
	nltb:=n<b;
	(n<b):=nltb;
	nlts:=n<s;
	(n<s):=nlts;
	nltu:=n<u;
	(n<u):=nltu;
	nltbc:=n<bc;
	(n<bc):=nltbc;
	nltn:=n<n;
	(n<n):=nltn;
	nltz:=n<z;
	(n<z):=nltz;
	nltq:=n<q;
	(n<q):=nltq;
	nltr:=n<r;
	(n<r):=nltr;
	zltb:=z<b;
	(z<b):=zltb;
	zlts:=z<s;
	(z<s):=zlts;
	zltu:=z<u;
	(z<u):=zltu;
	zltbc:=z<bc;
	(z<bc):=zltbc;
	zltn:=z<n;
	(z<n):=zltn;
	zltz:=z<z;
	(z<z):=zltz;
	zltq:=z<q;
	(z<q):=zltq;
	zltr:=z<r;
	(z<r):=zltr;
	qltb:=q<b;
	(q<b):=qltb;
	qlts:=q<s;
	(q<s):=qlts;
	qltu:=q<u;
	(q<u):=qltu;
	qltbc:=q<bc;
	(q<bc):=qltbc;
	qltn:=q<n;
	(q<n):=qltn;
	qltz:=q<z;
	(q<z):=qltz;
	qltq:=q<q;
	(q<q):=qltq;
	qltr:=q<r;
	(q<r):=qltr;
	rltb:=r<b;
	(r<b):=rltb;
	rlts:=r<s;
	(r<s):=rlts;
	rltu:=r<u;
	(r<u):=rltu;
	rltbc:=r<bc;
	(r<bc):=rltbc;
	rltn:=r<n;
	(r<n):=rltn;
	rltz:=r<z;
	(r<z):=rltz;
	rltq:=r<q;
	(r<q):=rltq;
	rltr:=r<r;
	(r<r):=rltr;
	bgeb:=b≥b;
	(b≥b):=bgeb;
	bges:=b≥s;
	(b≥s):=bges;
	bgeu:=b≥u;
	(b≥u):=bgeu;
	bgebc:=b≥bc;
	(b≥bc):=bgebc;
	bgen:=b≥n;
	(b≥n):=bgen;
	bgez:=b≥z;
	(b≥z):=bgez;
	bgeq:=b≥q;
	(b≥q):=bgeq;
	bger:=b≥r;
	(b≥r):=bger;
	sgeb:=s≥b;
	(s≥b):=sgeb;
	sges:=s≥s;
	(s≥s):=sges;
	sgeu:=s≥u; /// error
	(s≥u):=sgeu; /// error
	sgebc:=s≥bc;
	(s≥bc):=sgebc;
	sgen:=s≥n;
	(s≥n):=sgen;
	sgez:=s≥z;
	(s≥z):=sgez;
	sgeq:=s≥q;
	(s≥q):=sgeq;
	sger:=s≥r;
	(s≥r):=sger;
	ugeb:=u≥b;
	(u≥b):=ugeb;
	uges:=u≥s; /// error
	(u≥s):=uges; /// error
	ugeu:=u≥u;
	(u≥u):=ugeu;
	ugebc:=u≥bc;
	(u≥bc):=ugebc;
	ugen:=u≥n;
	(u≥n):=ugen;
	ugez:=u≥z;
	(u≥z):=ugez;
	ugeq:=u≥q;
	(u≥q):=ugeq;
	uger:=u≥r;
	(u≥r):=uger;
	bcgeb:=bc≥b;
	(bc≥b):=bcgeb;
	bcges:=bc≥s;
	(bc≥s):=bcges;
	bcgeu:=bc≥u;
	(bc≥u):=bcgeu;
	bcgebc:=bc≥bc;
	(bc≥bc):=bcgebc;
	bcgen:=bc≥n;
	(bc≥n):=bcgen;
	bcgez:=bc≥z;
	(bc≥z):=bcgez;
	bcgeq:=bc≥q;
	(bc≥q):=bcgeq;
	bcger:=bc≥r;
	(bc≥r):=bcger;
	ngeb:=n≥b;
	(n≥b):=ngeb;
	nges:=n≥s;
	(n≥s):=nges;
	ngeu:=n≥u;
	(n≥u):=ngeu;
	ngebc:=n≥bc;
	(n≥bc):=ngebc;
	ngen:=n≥n;
	(n≥n):=ngen;
	ngez:=n≥z;
	(n≥z):=ngez;
	ngeq:=n≥q;
	(n≥q):=ngeq;
	nger:=n≥r;
	(n≥r):=nger;
	zgeb:=z≥b;
	(z≥b):=zgeb;
	zges:=z≥s;
	(z≥s):=zges;
	zgeu:=z≥u;
	(z≥u):=zgeu;
	zgebc:=z≥bc;
	(z≥bc):=zgebc;
	zgen:=z≥n;
	(z≥n):=zgen;
	zgez:=z≥z;
	(z≥z):=zgez;
	zgeq:=z≥q;
	(z≥q):=zgeq;
	zger:=z≥r;
	(z≥r):=zger;
	qgeb:=q≥b;
	(q≥b):=qgeb;
	qges:=q≥s;
	(q≥s):=qges;
	qgeu:=q≥u;
	(q≥u):=qgeu;
	qgebc:=q≥bc;
	(q≥bc):=qgebc;
	qgen:=q≥n;
	(q≥n):=qgen;
	qgez:=q≥z;
	(q≥z):=qgez;
	qgeq:=q≥q;
	(q≥q):=qgeq;
	qger:=q≥r;
	(q≥r):=qger;
	rgeb:=r≥b;
	(r≥b):=rgeb;
	rges:=r≥s;
	(r≥s):=rges;
	rgeu:=r≥u;
	(r≥u):=rgeu;
	rgebc:=r≥bc;
	(r≥bc):=rgebc;
	rgen:=r≥n;
	(r≥n):=rgen;
	rgez:=r≥z;
	(r≥z):=rgez;
	rgeq:=r≥q;
	(r≥q):=rgeq;
	rger:=r≥r;
	(r≥r):=rger;
	bgtb:=b>b;
	(b>b):=bgtb;
	bgts:=b>s;
	(b>s):=bgts;
	bgtu:=b>u;
	(b>u):=bgtu;
	bgtbc:=b>bc;
	(b>bc):=bgtbc;
	bgtn:=b>n;
	(b>n):=bgtn;
	bgtz:=b>z;
	(b>z):=bgtz;
	bgtq:=b>q;
	(b>q):=bgtq;
	bgtr:=b>r;
	(b>r):=bgtr;
	sgtb:=s>b;
	(s>b):=sgtb;
	sgts:=s>s;
	(s>s):=sgts;
	sgtu:=s>u; /// error
	(s>u):=sgtu; /// error
	sgtbc:=s>bc;
	(s>bc):=sgtbc;
	sgtn:=s>n;
	(s>n):=sgtn;
	sgtz:=s>z;
	(s>z):=sgtz;
	sgtq:=s>q;
	(s>q):=sgtq;
	sgtr:=s>r;
	(s>r):=sgtr;
	ugtb:=u>b;
	(u>b):=ugtb;
	ugts:=u>s; /// error
	(u>s):=ugts; /// error
	ugtu:=u>u;
	(u>u):=ugtu;
	ugtbc:=u>bc;
	(u>bc):=ugtbc;
	ugtn:=u>n;
	(u>n):=ugtn;
	ugtz:=u>z;
	(u>z):=ugtz;
	ugtq:=u>q;
	(u>q):=ugtq;
	ugtr:=u>r;
	(u>r):=ugtr;
	bcgtb:=bc>b;
	(bc>b):=bcgtb;
	bcgts:=bc>s;
	(bc>s):=bcgts;
	bcgtu:=bc>u;
	(bc>u):=bcgtu;
	bcgtbc:=bc>bc;
	(bc>bc):=bcgtbc;
	bcgtn:=bc>n;
	(bc>n):=bcgtn;
	bcgtz:=bc>z;
	(bc>z):=bcgtz;
	bcgtq:=bc>q;
	(bc>q):=bcgtq;
	bcgtr:=bc>r;
	(bc>r):=bcgtr;
	ngtb:=n>b;
	(n>b):=ngtb;
	ngts:=n>s;
	(n>s):=ngts;
	ngtu:=n>u;
	(n>u):=ngtu;
	ngtbc:=n>bc;
	(n>bc):=ngtbc;
	ngtn:=n>n;
	(n>n):=ngtn;
	ngtz:=n>z;
	(n>z):=ngtz;
	ngtq:=n>q;
	(n>q):=ngtq;
	ngtr:=n>r;
	(n>r):=ngtr;
	zgtb:=z>b;
	(z>b):=zgtb;
	zgts:=z>s;
	(z>s):=zgts;
	zgtu:=z>u;
	(z>u):=zgtu;
	zgtbc:=z>bc;
	(z>bc):=zgtbc;
	zgtn:=z>n;
	(z>n):=zgtn;
	zgtz:=z>z;
	(z>z):=zgtz;
	zgtq:=z>q;
	(z>q):=zgtq;
	zgtr:=z>r;
	(z>r):=zgtr;
	qgtb:=q>b;
	(q>b):=qgtb;
	qgts:=q>s;
	(q>s):=qgts;
	qgtu:=q>u;
	(q>u):=qgtu;
	qgtbc:=q>bc;
	(q>bc):=qgtbc;
	qgtn:=q>n;
	(q>n):=qgtn;
	qgtz:=q>z;
	(q>z):=qgtz;
	qgtq:=q>q;
	(q>q):=qgtq;
	qgtr:=q>r;
	(q>r):=qgtr;
	rgtb:=r>b;
	(r>b):=rgtb;
	rgts:=r>s;
	(r>s):=rgts;
	rgtu:=r>u;
	(r>u):=rgtu;
	rgtbc:=r>bc;
	(r>bc):=rgtbc;
	rgtn:=r>n;
	(r>n):=rgtn;
	rgtz:=r>z;
	(r>z):=rgtz;
	rgtq:=r>q;
	(r>q):=rgtq;
	rgtr:=r>r;
	(r>r):=rgtr;
	beqb:=b=b;
	(b=b):=beqb;
	beqs:=b=s;
	(b=s):=beqs;
	bequ:=b=u;
	(b=u):=bequ;
	beqbc:=b=bc;
	(b=bc):=beqbc;
	beqn:=b=n;
	(b=n):=beqn;
	beqz:=b=z;
	(b=z):=beqz;
	beqq:=b=q;
	(b=q):=beqq;
	beqr:=b=r;
	(b=r):=beqr;
	seqb:=s=b;
	(s=b):=seqb;
	seqs:=s=s;
	(s=s):=seqs;
	sequ:=s=u; /// error
	(s=u):=sequ; /// error
	seqbc:=s=bc;
	(s=bc):=seqbc;
	seqn:=s=n;
	(s=n):=seqn;
	seqz:=s=z;
	(s=z):=seqz;
	seqq:=s=q;
	(s=q):=seqq;
	seqr:=s=r;
	(s=r):=seqr;
	ueqb:=u=b;
	(u=b):=ueqb;
	ueqs:=u=s; /// error
	(u=s):=ueqs; /// error
	uequ:=u=u;
	(u=u):=uequ;
	ueqbc:=u=bc;
	(u=bc):=ueqbc;
	ueqn:=u=n;
	(u=n):=ueqn;
	ueqz:=u=z;
	(u=z):=ueqz;
	ueqq:=u=q;
	(u=q):=ueqq;
	ueqr:=u=r;
	(u=r):=ueqr;
	bceqb:=bc=b;
	(bc=b):=bceqb;
	bceqs:=bc=s;
	(bc=s):=bceqs;
	bcequ:=bc=u;
	(bc=u):=bcequ;
	bceqbc:=bc=bc;
	(bc=bc):=bceqbc;
	bceqn:=bc=n;
	(bc=n):=bceqn;
	bceqz:=bc=z;
	(bc=z):=bceqz;
	bceqq:=bc=q;
	(bc=q):=bceqq;
	bceqr:=bc=r;
	(bc=r):=bceqr;
	neqb:=n=b;
	(n=b):=neqb;
	neqs:=n=s;
	(n=s):=neqs;
	nequ:=n=u;
	(n=u):=nequ;
	neqbc:=n=bc;
	(n=bc):=neqbc;
	neqn:=n=n;
	(n=n):=neqn;
	neqz:=n=z;
	(n=z):=neqz;
	neqq:=n=q;
	(n=q):=neqq;
	neqr:=n=r;
	(n=r):=neqr;
	zeqb:=z=b;
	(z=b):=zeqb;
	zeqs:=z=s;
	(z=s):=zeqs;
	zequ:=z=u;
	(z=u):=zequ;
	zeqbc:=z=bc;
	(z=bc):=zeqbc;
	zeqn:=z=n;
	(z=n):=zeqn;
	zeqz:=z=z;
	(z=z):=zeqz;
	zeqq:=z=q;
	(z=q):=zeqq;
	zeqr:=z=r;
	(z=r):=zeqr;
	qeqb:=q=b;
	(q=b):=qeqb;
	qeqs:=q=s;
	(q=s):=qeqs;
	qequ:=q=u;
	(q=u):=qequ;
	qeqbc:=q=bc;
	(q=bc):=qeqbc;
	qeqn:=q=n;
	(q=n):=qeqn;
	qeqz:=q=z;
	(q=z):=qeqz;
	qeqq:=q=q;
	(q=q):=qeqq;
	qeqr:=q=r;
	(q=r):=qeqr;
	reqb:=r=b;
	(r=b):=reqb;
	reqs:=r=s;
	(r=s):=reqs;
	requ:=r=u;
	(r=u):=requ;
	reqbc:=r=bc;
	(r=bc):=reqbc;
	reqn:=r=n;
	(r=n):=reqn;
	reqz:=r=z;
	(r=z):=reqz;
	reqq:=r=q;
	(r=q):=reqq;
	reqr:=r=r;
	(r=r):=reqr;
	bneqb:=b≠b;
	(b≠b):=bneqb;
	bneqs:=b≠s;
	(b≠s):=bneqs;
	bnequ:=b≠u;
	(b≠u):=bnequ;
	bneqbc:=b≠bc;
	(b≠bc):=bneqbc;
	bneqn:=b≠n;
	(b≠n):=bneqn;
	bneqz:=b≠z;
	(b≠z):=bneqz;
	bneqq:=b≠q;
	(b≠q):=bneqq;
	bneqr:=b≠r;
	(b≠r):=bneqr;
	sneqb:=s≠b;
	(s≠b):=sneqb;
	sneqs:=s≠s;
	(s≠s):=sneqs;
	snequ:=s≠u; /// error
	(s≠u):=snequ; /// error
	sneqbc:=s≠bc;
	(s≠bc):=sneqbc;
	sneqn:=s≠n;
	(s≠n):=sneqn;
	sneqz:=s≠z;
	(s≠z):=sneqz;
	sneqq:=s≠q;
	(s≠q):=sneqq;
	sneqr:=s≠r;
	(s≠r):=sneqr;
	uneqb:=u≠b;
	(u≠b):=uneqb;
	uneqs:=u≠s; /// error
	(u≠s):=uneqs; /// error
	unequ:=u≠u;
	(u≠u):=unequ;
	uneqbc:=u≠bc;
	(u≠bc):=uneqbc;
	uneqn:=u≠n;
	(u≠n):=uneqn;
	uneqz:=u≠z;
	(u≠z):=uneqz;
	uneqq:=u≠q;
	(u≠q):=uneqq;
	uneqr:=u≠r;
	(u≠r):=uneqr;
	bcneqb:=bc≠b;
	(bc≠b):=bcneqb;
	bcneqs:=bc≠s;
	(bc≠s):=bcneqs;
	bcnequ:=bc≠u;
	(bc≠u):=bcnequ;
	bcneqbc:=bc≠bc;
	(bc≠bc):=bcneqbc;
	bcneqn:=bc≠n;
	(bc≠n):=bcneqn;
	bcneqz:=bc≠z;
	(bc≠z):=bcneqz;
	bcneqq:=bc≠q;
	(bc≠q):=bcneqq;
	bcneqr:=bc≠r;
	(bc≠r):=bcneqr;
	nneqb:=n≠b;
	(n≠b):=nneqb;
	nneqs:=n≠s;
	(n≠s):=nneqs;
	nnequ:=n≠u;
	(n≠u):=nnequ;
	nneqbc:=n≠bc;
	(n≠bc):=nneqbc;
	nneqn:=n≠n;
	(n≠n):=nneqn;
	nneqz:=n≠z;
	(n≠z):=nneqz;
	nneqq:=n≠q;
	(n≠q):=nneqq;
	nneqr:=n≠r;
	(n≠r):=nneqr;
	zneqb:=z≠b;
	(z≠b):=zneqb;
	zneqs:=z≠s;
	(z≠s):=zneqs;
	znequ:=z≠u;
	(z≠u):=znequ;
	zneqbc:=z≠bc;
	(z≠bc):=zneqbc;
	zneqn:=z≠n;
	(z≠n):=zneqn;
	zneqz:=z≠z;
	(z≠z):=zneqz;
	zneqq:=z≠q;
	(z≠q):=zneqq;
	zneqr:=z≠r;
	(z≠r):=zneqr;
	qneqb:=q≠b;
	(q≠b):=qneqb;
	qneqs:=q≠s;
	(q≠s):=qneqs;
	qnequ:=q≠u;
	(q≠u):=qnequ;
	qneqbc:=q≠bc;
	(q≠bc):=qneqbc;
	qneqn:=q≠n;
	(q≠n):=qneqn;
	qneqz:=q≠z;
	(q≠z):=qneqz;
	qneqq:=q≠q;
	(q≠q):=qneqq;
	qneqr:=q≠r;
	(q≠r):=qneqr;
	rneqb:=r≠b;
	(r≠b):=rneqb;
	rneqs:=r≠s;
	(r≠s):=rneqs;
	rnequ:=r≠u;
	(r≠u):=rnequ;
	rneqbc:=r≠bc;
	(r≠bc):=rneqbc;
	rneqn:=r≠n;
	(r≠n):=rneqn;
	rneqz:=r≠z;
	(r≠z):=rneqz;
	rneqq:=r≠q;
	(r≠q):=rneqq;
	rneqr:=r≠r;
	(r≠r):=rneqr;
}
